[package]
name = "vec64"
version = "0.2.0"
edition = "2024"
description = "High-performance Rust vector type with automatic 64-byte SIMD alignment."
license = "MIT"

[dependencies]
rayon = { version = "1.10.0", optional = true }

[features]

# Adds parallel iterators via `Rayon`
parallel_proc = ["rayon"]